--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 <div class="navbar">
     <a href="">Home</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/About">About Us</a>
+    <a href="https://negative0debuged0.github.io/About">About Us</a>
     <div class="dropdown">
         <a href="">Socials</a>
         <div class="dropdown-content">
@@ -115,10 +115,10 @@
             <a href="https://discord.gg/kQfVYQuJGt">Discord server</a>
         </div>
     </div>
-    <a href="https://negative0debuged0.github.io/Negative0Web/Music">Music</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/Faq">FAQ</a>
-    <a href="javascript:getUserInfo()">Admin panel</a> <!-- Call JavaScript function -->
-    <a href="https://negative0debuged0.github.io/Negative0Web/Games">Games</a>
+    <a href="https://negative0debuged0.github.io/Music">Music</a>
+    <a href="https://negative0debuged0.github.io/Faq">FAQ</a>
+    <a href="https://negative0debuged0.github.io/Password">Admin panel</a> <!-- Call JavaScript function -->
+    <a href="https://negative0debuged0.github.io/Games">Games</a>
 </div>
 
 <script>
