--- a/Forums.html
+++ b/Forums.html
@@ -16,6 +16,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            flex-direction: column;
         }
 
         .forum-panel {
@@ -25,6 +26,7 @@
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
             width: 80%;
             max-width: 1000px;
+            margin-bottom: 20px;
         }
 
         h2 {
@@ -107,6 +109,12 @@
         .forum-table tr:hover {
             background-color: rgba(255, 255, 255, 0.2);
         }
+
+        /* Discord Widget Styling */
+        .discord-widget {
+            width: 80%;
+            max-width: 1000px;
+        }
     </style>
 </head>
 <body>
@@ -140,6 +148,10 @@
         </div>
     </div>
 
+    <div class="discord-widget">
+        <iframe src="https://discord.com/widget?id=1241138802970333226&theme=dark" width="100%" height="500" allowtransparency="true" frameborder="0"></iframe>
+    </div>
+
     <script>
         document.getElementById('create-topic-form').addEventListener('submit', function(event) {
             event.preventDefault();
@@ -166,3 +178,4 @@
     </script>
 </body>
 </html>
+
