--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <a href="https://negative0debuged0.github.io/Faq">FAQ</a>
     <a href="https://negative0debuged0.github.io/Password">Admin panel</a> <!-- Call JavaScript function -->
     <a href="https://negative0debuged0.github.io/Games">Games</a>
+    <a href="https://negative0debuged0.github.io/Forums">Forums</a>
 </div>
 
 <script>
