--- a/Forums.html
+++ b/Forums.html
@@ -149,7 +149,7 @@
     </div>
 
     <div class="discord-widget">
-        <iframe src="https://discord.com/widget?id=1241138802970333226&theme=dark" width="100%" height="500" allowtransparency="true" frameborder="0"></iframe>
+<iframe src="https://discord.com/widget?id=1241138802970333226&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>
 
     <script>
