--- a/Forums.html
+++ b/Forums.html
@@ -1,8 +1,233 @@
-<widgetbot
-    server="1241138802970333226"
-    channel="1241385530260848660"
-    width="800"
-    height="600"
-></widgetbot>
-<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Forum</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to bottom, #006400, #00FFFF); /* Vertical gradient: dark green to light aqua */
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background: linear-gradient(90deg, #006400, #00FFFF); /* Gradient navbar: dark green to light aqua */
+            padding: 1em 2em;
+            width: 100%;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .navbar a {
+            color: #eaeaea;
+            padding: 10px 15px;
+            text-decoration: none;
+            text-align: center;
+            position: relative;
+            transition: color 0.3s, transform 0.3s;
+        }
+        .navbar a::before {
+            content: '';
+            position: absolute;
+            width: 0%;
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            background-color: #ff6347;
+            transition: width 0.3s;
+        }
+        .navbar a:hover {
+            color: #ff6347;
+            transform: translateY(-2px);
+        }
+        .navbar a:hover::before {
+            width: 100%;
+        }
+        .forum-panel {
+            background: rgba(0, 0, 0, 0.7);
+            padding: 30px 40px;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            width: 80%;
+            max-width: 1000px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
 
+        h2 {
+            margin-bottom: 20px;
+            font-weight: 500;
+            text-align: center;
+        }
+
+        .forum-section {
+            margin-bottom: 20px;
+        }
+
+        .forum-section h3 {
+            margin-bottom: 10px;
+            font-weight: 400;
+            border-bottom: 2px solid #4caf50;
+            padding-bottom: 5px;
+        }
+
+        .forum-section p {
+            margin: 0 0 10px;
+        }
+
+        .forum-section input, .forum-section textarea, .forum-section select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            outline: none;
+            background: rgba(255, 255, 255, 0.1);
+            color: #fff;
+        }
+
+        .forum-section button {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4caf50;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            display: block;
+            margin: 10px auto;
+        }
+
+        .forum-section button:hover {
+            background-color: #45a049;
+        }
+
+        .forum-section button:active {
+            transform: scale(0.98);
+        }
+
+        /* Forum Styling */
+        .forum-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        .forum-table th, .forum-table td {
+            padding: 8px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+            color: #fff;
+        }
+
+        .forum-table th {
+            background-color: #4caf50;
+            color: #fff;
+        }
+
+        .forum-table tr:nth-child(even) {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+
+        .forum-table tr:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        /* Discord Widget Styling */
+        .discord-widget {
+            width: 80%;
+            max-width: 1000px;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+
+<div class="navbar">
+    <a href="#">Home</a>
+    <a href="#">About Us</a>
+    <a href="#">Socials</a>
+    <a href="#">Music</a>
+    <a href="#">FAQ</a>
+    <a href="#">Admin Panel</a>
+    <a href="#">Games</a>
+</div>
+
+<div class="forum-panel">
+    <h2>Forum</h2>
+
+    <div class="forum-section">
+        <h3>Create a New Topic</h3>
+        <form id="create-topic-form">
+            <input type="text" id="topic-title" placeholder="Topic Title" required>
+            <textarea id="topic-content" placeholder="Topic Content" rows="5" required></textarea>
+            <button type="submit">Post Topic</button>
+        </form>
+    </div>
+
+    <div class="forum-section">
+        <h3>Topics</h3>
+        <table class="forum-table">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Replies</th>
+                    <th>Last Post</th>
+                </tr>
+            </thead>
+            <tbody id="forum-topics-body">
+                <!-- Topics will be dynamically populated here -->
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="discord-widget">
+    <widgetbot
+        server="1241138802970333226"
+        channel="1241385530260848660"
+        width="1000"
+        height="800"
+    ></widgetbot>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+<script>
+    document.getElementById('create-topic-form').addEventListener('submit', function(event) {
+        event.preventDefault();
+        
+        const title = document.getElementById('topic-title').value;
+        const content = document.getElementById('topic-content').value;
+        const author = 'User' + Math.floor(Math.random() * 1000); // Replace with actual user logic
+        const replies = 0;
+        const lastPost = new Date().toLocaleString();
+
+        const forumTopicsBody = document.getElementById('forum-topics-body');
+        const newRow = forumTopicsBody.insertRow();
+
+        newRow.innerHTML = `
+            <td>${title}</td>
+            <td>${author}</td>
+            <td>${replies}</td>
+            <td>${lastPost}</td>
+        `;
+
+        // Clear the form
+        document.getElementById('create-topic-form').reset();
+    });
+</script>
+</body>
+</html>
