--- a/Forums.html
+++ b/Forums.html
@@ -6,15 +6,14 @@
     <title>Forum</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+            font-family: 'Roboto', sans-serif;
             background: linear-gradient(to bottom, #006400, #00FFFF); /* Vertical gradient: dark green to light aqua */
             color: #fff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            overflow: hidden;
         }
         .navbar {
             display: flex;
@@ -23,7 +22,7 @@
             background: linear-gradient(90deg, #006400, #00FFFF); /* Gradient navbar: dark green to light aqua */
             padding: 1em 2em;
             width: 100%;
-            position: sticky;
+            position: fixed;
             top: 0;
             z-index: 1000;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -53,103 +52,15 @@
         .navbar a:hover::before {
             width: 100%;
         }
-        .forum-panel {
-            background: rgba(0, 0, 0, 0.7);
-            padding: 30px 40px;
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-            width: 80%;
-            max-width: 1000px;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            font-weight: 500;
-            text-align: center;
-        }
-
-        .forum-section {
-            margin-bottom: 20px;
-        }
-
-        .forum-section h3 {
-            margin-bottom: 10px;
-            font-weight: 400;
-            border-bottom: 2px solid #4caf50;
-            padding-bottom: 5px;
-        }
-
-        .forum-section p {
-            margin: 0 0 10px;
-        }
-
-        .forum-section input, .forum-section textarea, .forum-section select {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: none;
-            border-radius: 5px;
-            font-size: 16px;
-            outline: none;
-            background: rgba(255, 255, 255, 0.1);
-            color: #fff;
-        }
-
-        .forum-section button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            background-color: #4caf50;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            display: block;
-            margin: 10px auto;
-        }
-
-        .forum-section button:hover {
-            background-color: #45a049;
-        }
-
-        .forum-section button:active {
-            transform: scale(0.98);
-        }
-
-        /* Forum Styling */
-        .forum-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        .forum-table th, .forum-table td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-            color: #fff;
-        }
-
-        .forum-table th {
-            background-color: #4caf50;
-            color: #fff;
-        }
-
-        .forum-table tr:nth-child(even) {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-
-        .forum-table tr:hover {
-            background-color: rgba(255, 255, 255, 0.2);
-        }
-
-        /* Discord Widget Styling */
         .discord-widget {
-            width: 80%;
-            max-width: 1000px;
-            margin-bottom: 20px;
+            position: absolute;
+            top: 60px; /* Adjust according to navbar height */
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 100%;
+            height: calc(100% - 60px); /* Adjust according to navbar height */
+            overflow: hidden;
         }
     </style>
 </head>
@@ -163,20 +74,9 @@
     <widgetbot
         server="1241138802970333226"
         channel="1241385530260848660"
-        width="1000"
-        height="800"
     ></widgetbot>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
-<script>
-    document.getElementById('create-topic-form').addEventListener('submit', function(event) {
-        event.preventDefault();
-        
-    
-
-
-    });
-</script>
 </body>
 </html>
