--- a/Forums.html
+++ b/Forums.html
@@ -56,11 +56,12 @@
             position: absolute;
             top: 60px; /* Adjust according to navbar height */
             left: 0;
-            right: 0;
-            bottom: 0;
             width: 100%;
             height: calc(100% - 60px); /* Adjust according to navbar height */
-            overflow: hidden;
+        }
+        widgetbot {
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
