--- a/Forums.html
+++ b/Forums.html
@@ -69,6 +69,7 @@
 
 <div class="navbar">
     <a href="https://negative0debuged0.github.io/">Home</a>
+    <h1> Join the discord for the best experience </h1>
 </div>
 
 <div class="discord-widget">
