--- a/Music.html
+++ b/Music.html
@@ -72,7 +72,7 @@
 </header>
 
 <nav>
-    <a href="https://negative0debuged0.github.io/Negative0Web">Home</a>
+    <a href="https://negative0debuged0.github.io">Home</a>
     <a href="about.html">About</a>
 </nav>
 
