--- a/Games.html
+++ b/Games.html
@@ -92,17 +92,17 @@
 <header>
     <h1>Games Page</h1>
     <div class="nav-menu">
-        <a href="https://negative0debuged0.github.io/Negative0Web/">Home</a>
-        <a href="https://negative0debuged0.github.io/Negative0Web/About">About</a>
+        <a href="https://negative0debuged0.github.io/">Home</a>
+        <a href="https://negative0debuged0.github.io/About">About</a>
     </div>
 </header>
 
 <div class="games-container">
-    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/Negative0Web/flappy';">
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/flappy';">
         <div class="game-title">Flappy Zer0</div>
         <img src="Game1.png" alt="Game 1">
     </div>
-    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/Negative0Web/Game2';">
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/Game2';">
         <div class="game-title">Snake game</div>
         <img src="Game2.png" alt="Game 2">
     </div>
