--- a/flappy.html
+++ b/flappy.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>Flappy Bird with Custom Character Use Chrome for a better experience</h1>
+        <h1>Flappy Bird with Custom Character</h1>
     </header>
     
     <div id="uploadContainer">
