--- a/OtherStuff.html
+++ b/OtherStuff.html
@@ -94,8 +94,7 @@
 
 <div class="navbar">
     <a href="https://negative0debuged0.github.io/">Home</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/Games">Games</a>
-    <a href="https://negative0debuged0.github.io/Negative0Web/OtherStuff">Other Stuff</a>
+    <a href="https://negative0debuged0.github.io/Games">Games</a>
 </div>
 
 <div class="content">
