--- a/OtherStuff.html
+++ b/OtherStuff.html
@@ -6,108 +6,107 @@
     <title>Other Stuff</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
-        html, body {
-            height: 100%;
+        body {
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(to bottom, #808080, #008080); /* Vertical gradient: gray to teal */
-            color: #fff;
             display: flex;
             flex-direction: column;
             align-items: center;
+            background: linear-gradient(135deg, #008080, #808080); /* Gradient background: teal to gray */
+            color: #fff;
         }
-        .navbar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background: linear-gradient(90deg, #808080, #008080); /* Gradient navbar: gray to teal */
-            padding: 1em 2em;
-            width: 100%;
-            position: fixed;
-            top: 0;
-            z-index: 1000;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .navbar a {
-            color: #eaeaea;
-            padding: 10px 15px;
-            text-decoration: none;
-            text-align: center;
-            position: relative;
-            transition: color 0.3s, transform 0.3s;
-            font-size: 0.9em; /* Adjust font size */
-            margin-right: 1em; /* Add margin to space out the links */
-        }
-        .navbar a::before {
-            content: '';
-            position: absolute;
-            width: 0%;
-            height: 2px;
-            bottom: 0;
-            left: 0;
-            background-color: #ff6347;
-            transition: width 0.3s;
-        }
-        .navbar a:hover {
-            color: #ff6347;
-            transform: translateY(-2px);
-        }
-        .navbar a:hover::before {
-            width: 100%;
-        }
-        .content {
-            width: 80%;
-            max-width: 1000px;
-            margin-top: 100px; /* Adjust according to navbar height */
+
+        header {
+            background: linear-gradient(135deg, #006666, #666666); /* Gradient header: darker teal to darker gray */
+            color: #fff;
             padding: 20px;
-            background: rgba(0, 0, 0, 0.7);
-            border-radius: 10px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-        }
-        h1 {
+            width: 100%;
             text-align: center;
-            font-weight: 500;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
+
+        .nav-menu {
+            display: flex;
+            justify-content: center;
             margin-bottom: 20px;
         }
-        p {
-            font-size: 1.2em;
-            line-height: 1.6;
-            margin-bottom: 20px;
+
+        .nav-menu a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 20px;
+            margin: 0 10px;
+            border-radius: 5px;
+            background-color: #006666; /* Teal */
+            transition: background-color 0.3s;
         }
-        /* Additional section styling */
-        .section {
-            margin-bottom: 20px;
+
+        .nav-menu a:hover {
+            background-color: #008080; /* Lighter teal on hover */
         }
-        .section h2 {
-            font-weight: 400;
-            border-bottom: 2px solid #4caf50;
-            padding-bottom: 5px;
+
+        .games-container {
+            max-width: 800px;
+            width: 90%;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent black background */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            text-align: center;
+        }
+
+        .game {
+            margin-bottom: 20px;
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .game img {
+            width: 100%;
+            max-width: 400px;
+            height: auto;
+            border-radius: 10px;
+            transition: filter 0.3s ease;
+        }
+
+        .game-title {
+            font-size: 20px;
+            font-weight: bold;
             margin-bottom: 10px;
+            color: #FFD700; /* Gold color for game titles */
         }
-        .section p {
-            margin: 0 0 10px;
+
+        /* Hover effects */
+        .game:hover {
+            transform: scale(1.05);
+        }
+
+        .game:hover img {
+            filter: brightness(80%);
         }
     </style>
 </head>
 <body>
 
-<div class="navbar">
-    <a href="https://negative0debuged0.github.io/">Home</a>
-    <a href="https://negative0debuged0.github.io/Games">Games</a>
-</div>
-
-<div class="content">
+<header>
     <h1>Other Stuff</h1>
-    <div class="section">
-        <h2>Youtube Ripoff</h2>
-        <p>Content for section 1 goes here. You can add more details, images, or links as needed.</p>
+    <div class="nav-menu">
+        <a href="https://negative0debuged0.github.io/">Home</a>
+        <a href="https://negative0debuged0.github.io/About">About</a>
     </div>
-    <div class="section">
-        <h2>Section 2</h2>
-        <p>Content for section 2 goes here. Add any additional information or resources relevant to this section.</p>
+</header>
+
+<div class="games-container">
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/YoutubeRipoff';">
+        <div class="game-title">Youtube Ripoff</div>
+        <img src="Other1.png" alt="Other 1">
     </div>
-    <!-- Add more sections as needed -->
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/NewTab';">
+        <div class="game-title">Fake new Tab</div>
+        <img src="NewTab.png" alt="fake new Tab">
+    </div>
+    <!-- Add more games as needed -->
 </div>
 
 </body>
