--- a/YoutubeRipoff.html
+++ b/YoutubeRipoff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Home Page</title>
+    <title>RipTube Home Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
