--- a/NewTab.html
+++ b/NewTab.html
@@ -92,7 +92,7 @@
 
     const browsers = [
         { name: 'Chrome', logo: 'https://upload.wikimedia.org/wikipedia/commons/8/87/Google_Chrome_icon_%282011%29.png', keyword: 'Chrome' },
-        { name: 'Firefox', logo: 'https://upload.wikimedia.org/wikipedia/commons/e/e7/Mozilla_Firefox_3.5_logo_256.png', keyword: 'Firefox' },
+        { name: 'Firefox', logo: 'https://upload.wikimedia.org/wikipedia/commons/1/16/Firefox_logo%2C_2017.png', keyword: 'Firefox' },
         { name: 'Opera', logo: 'https://upload.wikimedia.org/wikipedia/commons/4/49/Opera_2015_icon.png', keyword: 'OPR' },
         { name: 'Brave', logo: 'https://upload.wikimedia.org/wikipedia/commons/3/31/Brave_Browser_logo.png', keyword: 'Brave' },
         { name: 'Safari', logo: 'https://upload.wikimedia.org/wikipedia/commons/d/d7/Safari_browser_logo.png', keyword: 'Safari' }
