--- a/NewTab.html
+++ b/NewTab.html
@@ -70,19 +70,19 @@
 <div class="recent-sites">
     <div class="site">
         <img src="https://via.placeholder.com/50" alt="Site 1">
-        <p>Site 1</p>
+        <p>Riptube</p>
     </div>
     <div class="site">
         <img src="https://via.placeholder.com/50" alt="Site 2">
-        <p>Site 2</p>
+        <p>Snake game</p>
     </div>
     <div class="site">
         <img src="https://via.placeholder.com/50" alt="Site 3">
-        <p>Site 3</p>
+        <p>Negative0's website</p>
     </div>
     <div class="site">
         <img src="https://via.placeholder.com/50" alt="Site 4">
-        <p>Site 4</p>
+        <p></p>
     </div>
 </div>
 
@@ -92,7 +92,7 @@
 
     const browsers = [
         { name: 'Chrome', logo: 'https://upload.wikimedia.org/wikipedia/commons/8/87/Google_Chrome_icon_%282011%29.png', keyword: 'Chrome' },
-        { name: 'Firefox', logo: 'https://upload.wikimedia.org/wikipedia/commons/1/16/Firefox_logo%2C_2017.png', keyword: 'Firefox' },
+        { name: 'Firefox', logo: 'https://play-lh.googleusercontent.com/yssuOUUgzoiZve-NfSvkykhAP9QbnFEL-NfLNHmTjnAcLCMnEpZsvwg1brdSuRZrqg', keyword: 'Firefox' },
         { name: 'Opera', logo: 'https://upload.wikimedia.org/wikipedia/commons/4/49/Opera_2015_icon.png', keyword: 'OPR' },
         { name: 'Brave', logo: 'https://upload.wikimedia.org/wikipedia/commons/3/31/Brave_Browser_logo.png', keyword: 'Brave' },
         { name: 'Safari', logo: 'https://upload.wikimedia.org/wikipedia/commons/d/d7/Safari_browser_logo.png', keyword: 'Safari' }
