--- a/NewTab.html
+++ b/NewTab.html
@@ -49,6 +49,8 @@
             padding: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s;
+            text-decoration: none;
+            color: black;
         }
         .site img {
             max-width: 50px;
@@ -68,22 +70,22 @@
 </div>
 
 <div class="recent-sites">
-    <div class="site">
-        <img src="https://via.placeholder.com/50" alt="Site 1">
+    <a href="https://riptube.com" class="site" target="_blank">
+        <img src="https://via.placeholder.com/50" alt="Riptube">
         <p>Riptube</p>
-    </div>
-    <div class="site">
-        <img src="https://via.placeholder.com/50" alt="Site 2">
+    </a>
+    <a href="https://snake-game.com" class="site" target="_blank">
+        <img src="https://via.placeholder.com/50" alt="Snake Game">
         <p>Snake game</p>
-    </div>
-    <div class="site">
-        <img src="https://via.placeholder.com/50" alt="Site 3">
+    </a>
+    <a href="https://negative0.com" class="site" target="_blank">
+        <img src="https://via.placeholder.com/50" alt="Negative0's website">
         <p>Negative0's website</p>
-    </div>
-    <div class="site">
-        <img src="https://via.placeholder.com/50" alt="Site 4">
-        <p></p>
-    </div>
+    </a>
+    <a href="https://example.com" class="site" target="_blank">
+        <img src="https://via.placeholder.com/50" alt="Example">
+        <p>Example Site</p>
+    </a>
 </div>
 
 <script>
