--- a/NewTab.html
+++ b/NewTab.html
@@ -74,11 +74,11 @@
         <img src="https://via.placeholder.com/50" alt="Riptube">
         <p>Riptube</p>
     </a>
-    <a href="https://snake-game.com" class="site" target="_blank">
+    <a href="https://negative0debuged0.github.io/Game2" class="site" target="_blank">
         <img src="https://via.placeholder.com/50" alt="Snake Game">
         <p>Snake game</p>
     </a>
-    <a href="https://negative0.com" class="site" target="_blank">
+    <a href="https://negative0debuged0.github.io" class="site" target="_blank">
         <img src="https://via.placeholder.com/50" alt="Negative0's website">
         <p>Negative0's website</p>
     </a>
