--- a/NewTab.html
+++ b/NewTab.html
@@ -70,7 +70,7 @@
 </div>
 
 <div class="recent-sites">
-    <a href="https://riptube.com" class="site" target="_blank">
+    <a href="https://negative0debuged0.github.io/YoutubeRipoff" class="site" target="_blank">
         <img src="https://via.placeholder.com/50" alt="Riptube">
         <p>Riptube</p>
     </a>
