--- a/YoutubeRipoff.html
+++ b/YoutubeRipoff.html
@@ -167,16 +167,16 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="YouTube Logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo_2017.svg" alt="RipTube Logo">
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search">
             <button>Search</button>
         </div>
         <div class="nav-links">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/YouTube_social_white_square_%282017%29.svg" alt="YouTube Home">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/YouTube_social_black_square_%282017%29.svg" alt="YouTube Trending">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/YouTube_social_white_circle_%282017%29.svg" alt="YouTube Subscriptions">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/99/YouTube_social_white_square_%282017%29.svg" alt="Home">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/YouTube_social_black_square_%282017%29.svg" alt="RipTube Trending">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/YouTube_social_white_circle_%282017%29.svg" alt="RipTube Subscriptions">
             <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Settings_icon.svg" alt="Settings" id="settings-icon">
         </div>
     </header>
