--- a/YoutubeRipoff.html
+++ b/YoutubeRipoff.html
@@ -167,7 +167,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo.svg" alt="RipTube Logo">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/YouTube_Logo.svg" alt="RipTube">
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search">
