--- a/NewTab.html
+++ b/NewTab.html
@@ -71,7 +71,7 @@
 
 <div class="recent-sites">
     <a href="https://negative0debuged0.github.io/YoutubeRipoff" class="site" target="_blank">
-        <img src="https://via.placeholder.com/50" alt="Riptube">
+        <img src="https://img.freepik.com/free-psd/3d-square-with-youtube-logo_125540-1573.jpg" alt="Riptube">
         <p>Riptube</p>
     </a>
     <a href="https://negative0debuged0.github.io/Game2" class="site" target="_blank">
