--- a/OtherStuff.html
+++ b/OtherStuff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Other Stuff</title>
+    <title>Fun & Others</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -90,7 +90,7 @@
 <body>
 
 <header>
-    <h1>Other Stuff</h1>
+    <h1>Fun & Others</h1>
     <div class="nav-menu">
         <a href="https://negative0debuged0.github.io/">Home</a>
         <a href="https://negative0debuged0.github.io/About">About</a>
