--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <a href="https://negative0debuged0.github.io/Password">Admin panel</a> <!-- Call JavaScript function -->
     <a href="https://negative0debuged0.github.io/Games">Games</a>
     <a href="https://negative0debuged0.github.io/Forums">Forums</a>
-    <a href="https://negative0debuged0.github.io/OtherStuff">Other Stuff</a>
+    <a href="https://negative0debuged0.github.io/OtherStuff">Fun & Others</a>
 </div>
 
 <script>
