--- a/ForumLogin.html
+++ b/ForumLogin.html
@@ -15,7 +15,7 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
-            background: linear-gradient(135deg, #FF4500, #00CED1); /* Gradient background: orange to cyan */
+            background: linear-gradient(135deg, #00416A, #00BFFF); /* Gradient background: dark blue to cyan */
             color: #fff;
         }
 
@@ -51,7 +51,7 @@
             padding: 15px;
             border: none;
             border-radius: 5px;
-            background-color: #FF6347; /* Button color */
+            background-color: #1E90FF; /* Button color */
             color: white;
             font-size: 16px;
             cursor: pointer;
@@ -59,7 +59,7 @@
         }
 
         .login-container button:hover {
-            background-color: #FF4500; /* Darker button color on hover */
+            background-color: #00416A; /* Darker button color on hover */
         }
 
         .login-container button:active {
@@ -72,4 +72,9 @@
 <div class="login-container">
     <h1>Forum Login</h1>
     <input type="text" placeholder="Username" required>
-    <input type="password" placeholder="Password" required
+    <input type="password" placeholder="Password" required>
+    <button onclick="window.location.href='forum.html'">Login</button>
+</div>
+
+</body>
+</html>
