--- a/ForumLogin.html
+++ b/ForumLogin.html
@@ -73,7 +73,7 @@
     <h1>Forum Login</h1>
     <input type="text" placeholder="Username" required>
     <input type="password" placeholder="Password" required>
-    <button onclick="window.location.href='forum.html'">Login</button>
+    <button onclick="window.location.href='Forum'">Login</button>
 </div>
 
 </body>
