--- a/About.html
+++ b/About.html
@@ -51,7 +51,7 @@
 <body>
     <div class="container">
         <h1>About Negative0</h1>
-        <p>On this website, you can currently hear music.</p>
+        <p>On this website, you can currently hear music, Play games and do some other stuff.</p>
         <p>If you have any suggestions, feel free to comment them on the video.</p>
         <iframe src="https://www.youtube.com/embed/546hc9J_7RM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
