--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
         .footer a:hover {
             text-decoration: underline;
         }
+        .counter {
+            margin: 20px 0;
+        }
     </style>
 </head>
 <body>
@@ -117,10 +120,17 @@
     </div>
     <a href="https://negative0debuged0.github.io/Music">Music</a>
     <a href="https://negative0debuged0.github.io/Faq">FAQ</a>
-    <a href="https://negative0debuged0.github.io/Password">Admin panel</a> <!-- Call JavaScript function -->
+    <a href="https://negative0debuged0.github.io/Password">Admin panel</a>
     <a href="https://negative0debuged0.github.io/Games">Games</a>
     <a href="https://negative0debuged0.github.io/Forums">Forums</a>
     <a href="https://negative0debuged0.github.io/OtherStuff">Fun & Others</a>
+</div>
+
+<div class="counter">
+    <script type="text/javascript" src="https://www.hitwebcounter.com/counter/counter.js"></script>
+    <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=7832469&style=0007&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0">
+    </a>
 </div>
 
 <script>
