--- a/index.html
+++ b/index.html
@@ -127,10 +127,7 @@
 </div>
 
 <div class="counter">
-    <script type="text/javascript" src="https://www.hitwebcounter.com/counter/counter.js"></script>
-    <a href="https://www.hitwebcounter.com" target="_blank">
-        <img src="https://hitwebcounter.com/counter/counter.php?page=7832469&style=0007&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0">
-    </a>
+    <h3>Visitor Count: <span id="count"></span></h3>
 </div>
 
 <script>
@@ -192,6 +189,16 @@
         link.download = fileName;
         link.click();
     }
+
+    // Fetch visitor count from CountAPI
+    async function updateCounter() {
+        const response = await fetch('https://api.countapi.xyz/hit/your-namespace/your-key');
+        const data = await response.json();
+        document.getElementById('count').innerText = data.value;
+    }
+
+    // Update counter on page load
+    document.addEventListener('DOMContentLoaded', updateCounter);
 </script>
 
 </body>
