--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </div>
 
 <div class="counter">
-    <h3>Visitor Count: <span id="count"></span></h3>
+    <h3>Welcome to my Website! Enjoy your stay<span id="count"></span></h3>
 </div>
 
 <script>
