--- a/OtherStuff.html
+++ b/OtherStuff.html
@@ -106,7 +106,11 @@
         <div class="game-title">Fake new Tab</div>
         <img src="NewTab.png" alt="fake new Tab">
     </div>
-    <!-- Add more games as needed -->
+<div class="games-container">
+    <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/Buttons';">
+        <div class="game-title">Button Hover Effects</div>
+        <img src="Other2.png" alt="Other 2">
+    </div>
 </div>
 
 </body>
