--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
     <a href="https://negative0debuged0.github.io/Games">Games</a>
     <a href="https://negative0debuged0.github.io/Forums">Forums</a>
     <a href="https://negative0debuged0.github.io/OtherStuff">Fun & Others</a>
+    <a href="https://negative0debuged0.github.io/Music">Music</a>
+     <a href="">Style</a>
+        <div class="dropdown-content">
+            <a href="https://negative0debuged0.github.io/V1">First version</a>
+            <a href="https://negative0debuged0.github.io/neon">neon</a>
+            <a href="https://negative0debuged0.github.io/friendstyle">my friends style</a>
 </div>
 
 <div class="counter">
