--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
     </style>
 </head>
 <body>
-
 <div class="navbar">
     <a href="">Home</a>
     <a href="https://negative0debuged0.github.io/About">About Us</a>
@@ -142,23 +141,26 @@
             <a href="https://discord.gg/kQfVYQuJGt">Discord server</a>
         </div>
     </div>
+    <!-- New Styles Dropdown -->
+    <div class="dropdown">
+        <a href="#">Styles</a>
+        <div class="dropdown-content">
+            <a href="https://negative0debuged0.github.io/neon">Neon</a>
+            <a href="https://negative0debuged0.github.io/vadimus">Vadimus Lamprutus</a>
+            <a href="https://negative0debuged0.github.io/V1">First Version</a>
+        </div>
+    </div>
     <a href="https://negative0debuged0.github.io/Music">Music</a>
     <a href="https://negative0debuged0.github.io/Faq">FAQ</a>
+    <a href="https://negative0debuged0.github.io/Password">Admin panel</a>
     <a href="https://negative0debuged0.github.io/Games">Games</a>
     <a href="https://negative0debuged0.github.io/Forums">Forums</a>
     <a href="https://negative0debuged0.github.io/OtherStuff">Fun & Others</a>
-    <a href="https://negative0debuged0.github.io/Music">Music</a>
-     <a href="">Style</a>
-        <div class="dropdown-content">
-            <a href="https://negative0debuged0.github.io/V1">First version</a>
-            <a href="https://negative0debuged0.github.io/neon">neon</a>
-            <a href="https://negative0debuged0.github.io/friendstyle">my friends style</a>
 </div>
 
 <div class="counter">
     <h3>Welcome to my Website! Enjoy your stay<span id="count"></span></h3>
 </div>
-
 <button class="gradient-button" onclick="toggleGradient()">Toggle Animated Background</button>
 
 <script>
