--- a/vadimus.html
+++ b/vadimus.html
@@ -163,20 +163,30 @@
 
 <div class="navbar">
     <a href="">Home</a>
-    <a href="https://negative0debuged0.github.io/About">About Us</a>
-    <a href="https://negative0debuged0.github.io/Forums">Forums</a>
-    <a href="https://negative0debuged0.github.io/OtherStuff">Fun & Others</a>
-    <a href="#">Styles</a>
 </div>
 
 <main>
     <div class="card">
         <div class="card-content">
-            <h2>Socials</h2>
-            <p>Connect with us on YouTube, Steam, and join our Discord server!</p>
-            <a href="https://www.youtube.com/channel/UCTWn1tUqbSNLrCLyunHnlcA">YouTube</a>
-            <a href="https://steamcommunity.com/id/-Negative0_Debuged0/" style="margin-left: 10px;">Steam</a>
-            <a href="https://discord.gg/kQfVYQuJGt" style="margin-left: 10px;">Discord</a>
+            <h2>About Us</h2>
+            <p>Learn more about us and our journey.</p>
+            <a href="https://negative0debuged0.github.io/About">Visit About Us</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-content">
+            <h2>Forums</h2>
+            <p>Join the discussion and be part of our community.</p>
+            <a href="https://negative0debuged0.github.io/Forums">Visit Forums</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-content">
+            <h2>Fun & Others</h2>
+            <p>Explore fun content and other exciting sections.</p>
+            <a href="https://negative0debuged0.github.io/OtherStuff">Visit Fun & Others</a>
         </div>
     </div>
 
@@ -193,6 +203,32 @@
             <h2>FAQ</h2>
             <p>Have questions? Check out our FAQ section to learn more!</p>
             <a href="https://negative0debuged0.github.io/Faq">Visit FAQ</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-content">
+            <h2>Admin Panel</h2>
+            <p>Restricted area. Admin access required.</p>
+            <a href="https://negative0debuged0.github.io/Password">Go to Admin Panel</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-content">
+            <h2>Games</h2>
+            <p>Play games directly from our site.</p>
+            <a href="https://negative0debuged0.github.io/Games">Play Now</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-content">
+            <h2>Socials</h2>
+            <p>Connect with us on YouTube, Steam, and Discord.</p>
+            <a href="https://www.youtube.com/channel/UCTWn1tUqbSNLrCLyunHnlcA">YouTube</a>
+            <a href="https://steamcommunity.com/id/-Negative0_Debuged0/" style="margin-left: 10px;">Steam</a>
+            <a href="https://discord.gg/kQfVYQuJGt" style="margin-left: 10px;">Discord</a>
         </div>
     </div>
 </main>
