--- a/Games.html
+++ b/Games.html
@@ -106,7 +106,10 @@
         <div class="game-title">Snake game</div>
         <img src="Game2.png" alt="Game 2">
     </div>
-    <!-- Add more games as needed -->
+ <div class="game" onclick="window.location.href='https://negative0debuged0.github.io/pingpong';">
+        <div class="game-title">pingpong</div>
+        <img src="pingpong.png" alt="pingpong">
+    </div>
 </div>
 
 </body>
