--- a/Chat.html
+++ b/Chat.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zer0's Chat</title>
+  <title>Zer0's chat</title>
   <style>
     /* Fullscreen Styling */
     body {
@@ -54,7 +54,7 @@
       flex-direction: column;
       align-items: center;
       margin-top: 80px; /* Add space for the navbar */
-      padding-top: 400px;
+      padding-top: 450px
     }
     h1 {
       margin-bottom: 20px;
@@ -147,12 +147,12 @@
 
   <!-- Navbar -->
   <div class="navbar">
-    <a href="https://negative0debuged0.github.io">Home</a>
+    <a href="#">Home</a>
   </div>
 
   <!-- Chat Container -->
   <div class="chat-container">
-    <h1>Zer0's chat (ask for help in the discord)</h1>
+    <h1>Zer0's Chat</h1>
 
     <input type="text" id="nameInput" placeholder="Enter your name" required>
     <button id="setNameButton">Set Name</button>
@@ -170,8 +170,8 @@
   <script>
     const GIST_ID = '1197dbeb30bd90fd850f7176b0f5981f';  // Replace with your Gist ID
     const API_URL = `https://api.github.com/gists/${GIST_ID}`;
-    const TOKEN = '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'; // Replace with your GitHub token
-    const ADMIN_PASSWORD = "ExaTerra10100"; // Admin password
+    const TOKEN = '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'; // Replace with your GitHub token
+    const ADMIN_PASSWORD = "123"; // Admin password
 
     let currentMessages = [];
     let userName = '';
